fix: company rating stars background shifting

--- a/client/src/components/view/main/content/company/company.scss
+++ b/client/src/components/view/main/content/company/company.scss
@@ -1,8 +1,6 @@
 .user__star {
-    height: 2rem;
-    width: 10rem;
-    margin: .5rem;
+    display: flex;
 }
 .user__star-item {
-    width: 20%;
+    width: 1.2rem;
 }
